[tool.poetry]
name = "gold-shop-backend"
version = "1.0.0"
description = "Backend for a gold shop management website"
authors = ["Rahmat Ansari <rahmat.ansari.dev@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.6"
pydantic-settings = "^2.0.3"
alembic = "^1.11.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
redis = "^4.6.0"
pydantic = {extras = ["email"], version = "^2.1.1"}
bcrypt = "^4.0.1"
rich = "^13.5.2"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

